--- a/styles/main.css
+++ b/styles/main.css
@@ -12,9 +12,36 @@ body{
     padding-right: 0;
     margin-left: auto;
     margin-right: auto;
+    /*
     width: 1200px; 
     height: 650px;
+    */
     display: block;
     background-color: black;
     border: 5px solid rgba(200, 200, 200, 0.6);
+}
+
+.info span{
+    font-size: 22px;
+    color: grey;
+}
+
+.legend h5{
+    display: inline;
+    padding: 0 20px 0 0;
+    font-size: 15px;
+    color: dimgrey;
+}
+
+.legend h5 span{
+    padding: 0 10px 0 0;
+    font-size: 15px;
+}
+
+.legend h5:first-child span{
+    color: blue;
+}
+
+.legend h5:last-child span{
+    color: red;
 }
